--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </li>
     </template>
     <template class="more-button-template">
-      <button class="button more-button">Показать еще</button>
+      <button class="button more-button">Показать ещё</button>
     </template>
 
     <template class="error-template">
